src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_file_press_n.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 12.0K (4 files), freed: 0 | /tmp/diskonaut_tests/delete_file_press_n                                                                                                                  
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────┐
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file2                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                 subfolder1/ (+1 descendants)                 │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                              │
│                                                                                                                             │                          4.0K (33%)                          │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file3                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit, <Q> - quit immediately
