src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_folder_with_multiple_children.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 44.0K (7 files), freed: 0 | /tmp/diskonaut_tests/delete_folder_with_multiple_children                                                                                                 
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬───────────────────────────────────────────────────┐
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                 file1                                                                  │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                              16.0K (36%)                                                               │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │           subfolder1/ (+4 descendants)            │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                   │
│                                                                                                                                        │                    12.0K (27%)                    │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                 file2                                                                  │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                              16.0K (36%)                                                               │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit, <Q> - quit immediately
